--- a/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
+++ b/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "source": [
     "### main_flux_finetune_baselines.py\n",
-    "This notebook reads in HLS S30/L30 data, MERRA-2 processed data uses\n",
+    "This notebook reads in HLS S30/L30 data and MERRA-2 processed data and uses\n",
     "Prithvi-EO-2.0-300M/ Prithvi-EO-2.0-300M-TL (with temporal and location embedding) to\n",
     "regress GPP flux at eddy covariance observation sites.\n",
     "\n",
-    "Authors: Srija Chakraborty, Besart Mujeci, MERRA variables selection, flux inputs from Yanghui Kang\n",
+    "Authors: Srija Chakraborty, Besart Mujeci (MERRA variables selection), Yanghui Kang (flux inputs)\n",
     "Usage:\n",
     "```\n",
     "    jupyter lab main_flux_finetune_baselines_trainer.ipynb\n",
