--- a/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
+++ b/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
@@ -19,10 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "d08434df-fac2-40c6-a6fa-8c70d42e3c71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:albumentations.check_version:A new version of Albumentations is available: 1.4.21 (you have 1.4.10). Upgrade using: pip install --upgrade albumentations\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -35,7 +43,7 @@
     "import rasterio\n",
     "import yaml\n",
     "import glob\n",
-    "#from Prithvi_global_v1.mae.models_mae import MaskedAutoencoderViT\n",
+    "\n",
     "import pickle\n",
     "from Prithvi_global_v1.mae.config import get_config\n",
     "import argparse\n",
@@ -46,8 +54,7 @@
     "from flux_load_data_vInf3 import flux_dataset, flux_dataloader\n",
     "from flux_regress import RegressionModel_flux\n",
     "from flux_regress import prithvi\n",
-    "#import wandb\n",
-    "# from Prithvi_global_v1.mae.config import get_config\n",
+    "\n",
     "from PIL import Image\n",
     "from flux_load_data_vInf3 import load_raster\n",
     "from flux_load_data_vInf3 import preprocess_image\n",
@@ -65,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "813e3015-b0bb-4a9f-82ad-61d3663523e6",
    "metadata": {},
    "outputs": [],
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "9f5bc4c3-7784-4702-b26e-86efd7b63698",
    "metadata": {},
    "outputs": [],
@@ -99,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "fdabb39d-22ed-4fee-966f-c9fe3af6ca12",
    "metadata": {},
    "outputs": [],
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "27a9e101-7d99-4024-b366-162244d3f0de",
    "metadata": {},
    "outputs": [],
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "3779b849-11c9-4afd-817a-ca0236ed3787",
    "metadata": {},
    "outputs": [
@@ -236,12 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "ea5bce36-24e9-49b7-ab83-710184ef0bf2",
    "metadata": {},
    "outputs": [],
    "source": [
-    " #read merra, gpp inputs\n",
+    "#read merra, gpp inputs\n",
     "df = pd.read_csv(\"data_train_hls_37sites_v0_1.csv\")\n",
     "\n",
     "#get train_test splits\n",
@@ -273,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "4ab54550-854d-4156-82fe-ec00fd927ca0",
    "metadata": {},
    "outputs": [],
@@ -288,6 +295,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "939f5d58-b2d3-4dbf-bcaf-cec785e7312b",
+   "metadata": {},
+   "source": [
+    "### Downloading the checkpoint from HuggingFace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c1dfc48b-c21a-420a-a079-28f09a831b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import hf_hub_download, snapshot_download\n",
+    "\n",
+    "if not os.path.isfile(\"Prithvi_EO_V2_300M_TL.pt\"):\n",
+    "    hf_hub_download(\n",
+    "                  repo_id=\"ibm-nasa-geospatial/Prithvi-EO-2.0-300M-TL\",\n",
+    "                  filename=\"Prithvi_EO_V2_300M_TL.pt\",\n",
+    "                  local_dir=\".\",\n",
+    "         )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bcfbdccf-e6bd-4cfa-ae6a-b94c30afea75",
    "metadata": {},
    "source": [
@@ -296,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "75607a1a-9f23-4812-be65-66075d6b9594",
    "metadata": {},
    "outputs": [
@@ -304,15 +336,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_217616/199415728.py:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_1885233/199415728.py:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  self.checkpoint = torch.load(self.weights_path)\n"
      ]
     }
    ],
    "source": [
+    "from terratorch.models.backbones.prithvi_mae import PrithviViT\n",
     "from terratorch.models.backbones.vit_encoder_decoder import TemporalViTEncoder\n",
     "\n",
-    "wt_file='/dccstor/jlsa931/carbon_flux/checkpoints/checkpoint.pt'#checkpoint for 300M, or 300M T+L\n",
+    "wt_file  =\"Prithvi_EO_V2_300M_TL.pt\"\n",
     "\n",
     "cf_full=get_config(None)\n",
     "\n",
@@ -346,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "ebd1dbb7-11a5-480a-b100-d0f603a26d24",
    "metadata": {},
    "outputs": [],
@@ -366,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "66c6528e-0985-4dde-a4d7-e1310a13afec",
    "metadata": {},
    "outputs": [
@@ -392,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "b8031885-1d96-4498-8fe4-4aa73a8bcd88",
    "metadata": {},
    "outputs": [
@@ -443,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "bec6275e-8166-49c1-9d4b-36915037231c",
    "metadata": {},
    "outputs": [
@@ -458,7 +491,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af9f78663ca2478e8b2982cefba02653",
+       "model_id": "50ff28a560cd401db02ef466538f6cc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,7 +532,7 @@
        "Text(0.5, 1.0, 'R2: 0.07792048281341468')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -558,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "54aca5dc-8e9c-405d-a0be-7d97ca46054f",
    "metadata": {},
    "outputs": [
@@ -626,7 +659,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d06156ed63c946128b1becbc3df9f0d9",
+       "model_id": "951bf099b51346e4ad81697610f130b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -670,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "99007e50-8c03-4b15-8646-e5decd7a81b5",
    "metadata": {},
    "outputs": [
@@ -685,7 +718,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1168aa34422e4e4bb3b51d1e4af5a3e5",
+       "model_id": "abe11e0e25404a388c492b0cd8a8ba8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -717,7 +750,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5224866bfd5c4897bbafbacbf26807f9",
+       "model_id": "5ddfb919e0f745a89fb4d3e4fc46cd80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -754,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "47f94148-cc84-43f4-9ada-20155b3c3fcf",
    "metadata": {},
    "outputs": [],
@@ -782,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "9438e038-5c90-4278-a284-efe34369ab88",
    "metadata": {},
    "outputs": [
@@ -792,7 +825,7 @@
        "Text(0.5, 1.0, 'R2: 0.7124365915266387')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -843,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "4335fe75-eae7-4bab-b91c-4eb75c421864",
    "metadata": {},
    "outputs": [
@@ -860,7 +893,7 @@
        "Text(0.5, 1.0, 'R2: 0.8809318317824169')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
