Updating notebook and config
Signed-off-by: João Lucas de Sousa Almeida <joao.l.sa.9.3@gmail.com>

--- a/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
+++ b/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
@@ -11,7 +11,7 @@
     "regress GPP flux at eddy covariance observation sites.\n",
     "\n",
     "Authors: Srija Chakraborty, Besart Mujeci (MERRA variables selection), Yanghui Kang (flux inputs)\n",
-"\n",
+    "\n",
     "Usage:\n",
     "```\n",
     "    jupyter lab main_flux_finetune_baselines_trainer.ipynb\n",
@@ -164,7 +164,7 @@
     "        self.prithvi_model = model_instance\n",
     "        self.prithvi_model.eval() # to double check the prithvi weights being frozen\n",
     "\n",
-    "        _ = self.prithvi_model.load_state_dict(self.checkpoint, strict=False)\n",
+    "        self.prithvi_model.load_state_dict(self.checkpoint, strict=False)\n",
     "\n",
     "    def freeze_encoder(self):\n",
     "        freeze_module(self.prithvi_model)\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "75607a1a-9f23-4812-be65-66075d6b9594",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1885233/199415728.py:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_1407734/1594392067.py:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  self.checkpoint = torch.load(self.weights_path)\n"
      ]
     }
@@ -346,7 +346,7 @@
     "from terratorch.models.backbones.prithvi_mae import PrithviViT\n",
     "from terratorch.models.backbones.vit_encoder_decoder import TemporalViTEncoder\n",
     "\n",
-    "wt_file  =\"Prithvi_EO_V2_300M_TL.pt\"\n",
+    "wt_file  = \"Prithvi_EO_V2_300M_TL.pt\"\n",
     "\n",
     "cf_full=get_config(None)\n",
     "\n",
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b8031885-1d96-4498-8fe4-4aa73a8bcd88",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
     "        checkpoint_callback,\n",
     "        LearningRateMonitor(logging_interval=\"epoch\"),\n",
     "    ],\n",
-    "    max_epochs=num_epochs, # train only one epoch for demo\n",
+    "    max_epochs=num_epochs,\n",
     "    default_root_dir=default_root_dir,\n",
     "    log_every_n_steps=1,\n",
     "    check_val_every_n_epoch=200\n",
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "bec6275e-8166-49c1-9d4b-36915037231c",
    "metadata": {},
    "outputs": [
@@ -486,13 +486,14 @@
      "output_type": "stream",
      "text": [
       "INFO: LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "INFO:lightning.pytorch.accelerators.cuda:LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
+      "INFO:lightning.pytorch.accelerators.cuda:LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "/dccstor/jlsa931/.pyenv/versions/3.11.9/envs/nasa/lib/python3.11/site-packages/lightning/pytorch/core/saving.py:363: Skipping 'model' parameter because it is not possible to safely dump to YAML.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50ff28a560cd401db02ef466538f6cc8",
+       "model_id": "220351109493465c83f124de062cf625",
        "version_major": 2,
        "version_minor": 0
       },
@@ -502,13 +503,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/dccstor/jlsa931/.pyenv/versions/3.11.9/envs/nasa/lib/python3.11/site-packages/lightning/pytorch/core/saving.py:363: Skipping 'model' parameter because it is not possible to safely dump to YAML.\n"
-     ]
     },
     {
      "data": {
@@ -533,7 +527,7 @@
        "Text(0.5, 1.0, 'R2: 0.07792048281341468')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -592,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "54aca5dc-8e9c-405d-a0be-7d97ca46054f",
    "metadata": {},
    "outputs": [
@@ -660,7 +654,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "951bf099b51346e4ad81697610f130b8",
+       "model_id": "e2f544e2a85b41369d85c153f7008d57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -704,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "99007e50-8c03-4b15-8646-e5decd7a81b5",
    "metadata": {},
    "outputs": [
@@ -719,7 +713,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abe11e0e25404a388c492b0cd8a8ba8f",
+       "model_id": "17f6cfa28f6f4caaae4e2e434c8ad7b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -751,7 +745,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ddfb919e0f745a89fb4d3e4fc46cd80",
+       "model_id": "15349c447beb4605886764c532d5e3da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "47f94148-cc84-43f4-9ada-20155b3c3fcf",
    "metadata": {},
    "outputs": [],
@@ -816,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9438e038-5c90-4278-a284-efe34369ab88",
    "metadata": {},
    "outputs": [
@@ -826,7 +820,7 @@
        "Text(0.5, 1.0, 'R2: 0.7124365915266387')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -877,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "4335fe75-eae7-4bab-b91c-4eb75c421864",
    "metadata": {},
    "outputs": [
@@ -894,7 +888,7 @@
        "Text(0.5, 1.0, 'R2: 0.8809318317824169')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
