adds predictions to o landslide and multicrop examples

--- a/examples/example_landslide4sense.ipynb
+++ b/examples/example_landslide4sense.ipynb
@@ -45,6 +45,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34e29c4f-03f3-4ca7-9912-8b3e51e00b1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you dont have the dataset yet, download it with\n",
+    "from huggingface_hub import snapshot_download\n",
+    "\n",
+    "repo_id = \"ibm-nasa-geospatial/Landslide4sense\"\n",
+    "local_path = snapshot_download(repo_id=repo_id)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "35162228-cfbe-451a-a401-7a31e2efdafa",
    "metadata": {},
@@ -59,8 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the dataset can be downloaded at https://huggingface.co/ibm-nasa-geospatial\n",
-    "DATASET_PATH = os.path.join('/dccstor/geofm-finetuning/datasets', 'Landslide4sense')"
+    "DATASET_PATH = os.path.join('data_dir', 'Landslide4sense')"
    ]
   },
   {
@@ -440,7 +453,7 @@
     "# DataModule\n",
     "data_module = Landslide4SenseNonGeoDataModule(\n",
     "    batch_size=8,\n",
-    "    bands = [\"BLUE\", \"GREEN\", \"RED\", \"NIR_BROAD\", \"SWIR_1\", \"SWIR_2\", \"SLOPE\", \"DEM\"],\n",
+    "    bands = [\"BLUE\", \"GREEN\", \"RED\", \"NIR_BROAD\", \"SWIR_1\", \"SWIR_2\"],\n",
     "    data_root=DATASET_PATH,\n",
     "    train_transform=transforms,\n",
     "    val_transform=transforms,\n",
@@ -453,9 +466,9 @@
     "        \"decoder\": \"UperNetDecoder\",\n",
     "        \"backbone_pretrained\": False,\n",
     "        \"backbone\": \"prithvi_eo_v2_300\", # Model can be either prithvi_eo_v2_300, prithvi_eo_v2_300_tl, prithvi_eo_v2_600, prithvi_eo_v2_600_tl\n",
-    "        \"backbone_in_channels\": 8,\n",
+    "        \"backbone_in_channels\": 6,\n",
     "        \"rescale\": True,\n",
-    "        \"backbone_bands\": [\"BLUE\", \"GREEN\", \"RED\", \"NIR_BROAD\", \"SWIR_1\", \"SWIR_2\", \"SLOPE\", \"DEM\"],\n",
+    "        \"backbone_bands\": [\"BLUE\", \"GREEN\", \"RED\", \"NIR_BROAD\", \"SWIR_1\", \"SWIR_2\"],\n",
     "        \"backbone_num_frames\": 1,\n",
     "        \"num_classes\": 2,\n",
     "        \"head_dropout\": 0.1,\n",
