--- a/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
+++ b/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
@@ -20,18 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d08434df-fac2-40c6-a6fa-8c70d42e3c71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:albumentations.check_version:A new version of Albumentations is available: 1.4.21 (you have 1.4.10). Upgrade using: pip install --upgrade albumentations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -49,7 +41,6 @@
     "import glob\n",
     "\n",
     "import pickle\n",
-    "from aux.mae.config import get_config\n",
     "import argparse\n",
     "from typing import Optional\n",
     "from functools import partial\n",
@@ -57,7 +48,6 @@
     "import rasterio\n",
     "from flux_load_data_vInf3 import flux_dataset, flux_dataloader\n",
     "from flux_regress import RegressionModel_flux\n",
-    "from flux_regress import prithvi\n",
     "\n",
     "from PIL import Image\n",
     "from flux_load_data_vInf3 import load_raster\n",
@@ -76,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "813e3015-b0bb-4a9f-82ad-61d3663523e6",
    "metadata": {},
    "outputs": [],
@@ -89,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9f5bc4c3-7784-4702-b26e-86efd7b63698",
    "metadata": {},
    "outputs": [],
@@ -110,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fdabb39d-22ed-4fee-966f-c9fe3af6ca12",
    "metadata": {},
    "outputs": [],
@@ -147,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "27a9e101-7d99-4024-b366-162244d3f0de",
    "metadata": {},
    "outputs": [],
@@ -191,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3779b849-11c9-4afd-817a-ca0236ed3787",
    "metadata": {},
    "outputs": [
@@ -209,6 +199,13 @@
     "\n",
     "device=config[\"device_name\"]\n",
     "n_channel=config[\"model\"][\"n_channel\"]\n",
+    "embed_dim = config[\"model\"][\"embed_dim\"]\n",
+    "patch_size = config[\"model\"][\"patch_size\"]\n",
+    "num_heads = config[\"model\"][\"num_heads\"]\n",
+    "mlp_ratio = config[\"model\"][\"mlp_ratio\"]\n",
+    "decoder_depth = config[\"model\"][\"decoder_depth\"]\n",
+    "head_dropout = config[\"model\"][\"head_dropout\"]\n",
+    "\n",
     "n_frame=config[\"data\"][\"n_frame\"]\n",
     "n_iteration=config[\"n_iteration\"]\n",
     "checkpoint_dir=config[\"logging\"][\"checkpoint_dir\"]\n",
@@ -248,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "ea5bce36-24e9-49b7-ab83-710184ef0bf2",
    "metadata": {},
    "outputs": [],
@@ -285,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "4ab54550-854d-4156-82fe-ec00fd927ca0",
    "metadata": {},
    "outputs": [],
@@ -308,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c1dfc48b-c21a-420a-a079-28f09a831b8f",
    "metadata": {},
    "outputs": [],
@@ -333,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "75607a1a-9f23-4812-be65-66075d6b9594",
    "metadata": {},
    "outputs": [],
@@ -343,17 +340,17 @@
     "\n",
     "wt_file  = \"Prithvi_EO_V2_300M_TL.pt\"\n",
     "\n",
-    "cf_full=get_config(None)\n",
+    "#cf_full=get_config(None)\n",
     "\n",
     "prithvi_instance = PrithviViT(\n",
-    "        patch_size=cf_full.MODEL.PATCH_SIZE[1],\n",
-    "        num_frames=1,\n",
-    "        in_chans=len(cf_full.DATA.BANDS),\n",
-    "        embed_dim=cf_full.MODEL.EMBED_DIM,\n",
-    "        decoder_depth=8,\n",
-    "        num_heads=cf_full.MODEL.NUM_HEADS,\n",
-    "        mlp_ratio=cf_full.MODEL.MLP_RATIO,\n",
-    "        head_dropout=0.2,\n",
+    "        patch_size=patch_size,\n",
+    "        num_frames=n_frame,\n",
+    "        in_chans=n_channel,\n",
+    "        embed_dim=embed_dim,\n",
+    "        decoder_depth=decoder_depth,\n",
+    "        num_heads=num_heads,\n",
+    "        mlp_ratio=mlp_ratio,\n",
+    "        head_dropout=head_dropout,\n",
     "        backbone_input_size=[1,50,50],\n",
     "        encoder_only=False,\n",
     "        padding=True,\n",
@@ -375,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "ebd1dbb7-11a5-480a-b100-d0f603a26d24",
    "metadata": {},
    "outputs": [],
@@ -395,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "66c6528e-0985-4dde-a4d7-e1310a13afec",
    "metadata": {},
    "outputs": [],
@@ -413,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "b8031885-1d96-4498-8fe4-4aa73a8bcd88",
    "metadata": {},
    "outputs": [
@@ -464,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "bec6275e-8166-49c1-9d4b-36915037231c",
    "metadata": {},
    "outputs": [
@@ -479,7 +476,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa5b2274e9e24933820a96edb1b15774",
+       "model_id": "f83e5d330e29418995a801c7153865bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -494,7 +491,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:Input torch.Size([1, 50, 50]) is not divisible by patch size (1, 16, 16).The border will be ignored, add backbone_padding for pixel-wise tasks.\n"
+      "WARNING:root:Input torch.Size([1, 50, 50]) is not divisible by patch size [1, 16, 16].The border will be ignored, add backbone_padding for pixel-wise tasks.\n"
      ]
     },
     {
@@ -520,7 +517,7 @@
        "Text(0.5, 1.0, 'R2: -0.06871945631186782')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -579,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "54aca5dc-8e9c-405d-a0be-7d97ca46054f",
    "metadata": {},
    "outputs": [
@@ -646,7 +643,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56e67dc1b9ed4503a8a346296f8986d0",
+       "model_id": "22b8abece3984d2da4417dc85db9355c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "99007e50-8c03-4b15-8646-e5decd7a81b5",
    "metadata": {},
    "outputs": [
@@ -705,7 +702,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37c3a196445e4846a7d480f11e548678",
+       "model_id": "4751367e11ee423ebfd2d4c675710872",
        "version_major": 2,
        "version_minor": 0
       },
@@ -737,7 +734,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e08545b267af481a95ab92235563118b",
+       "model_id": "6b7719c02aa44fbd9e95345d18f94e83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -774,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "47f94148-cc84-43f4-9ada-20155b3c3fcf",
    "metadata": {},
    "outputs": [],
@@ -802,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "9438e038-5c90-4278-a284-efe34369ab88",
    "metadata": {},
    "outputs": [
@@ -812,7 +809,7 @@
        "Text(0.5, 1.0, 'R2: 0.7499189016430968')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -863,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "4335fe75-eae7-4bab-b91c-4eb75c421864",
    "metadata": {},
    "outputs": [
@@ -880,7 +877,7 @@
        "Text(0.5, 1.0, 'R2: 0.9124792636032804')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
