--- a/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
+++ b/examples/carbon_flux/main_flux_finetune_baselines_trainer.ipynb
@@ -200,6 +200,7 @@
     }
    ],
    "source": [
+    "\n",
     "with open('fluxconfig_trainer.yaml', 'r') as file:\n",
     "        config = yaml.safe_load(file)\n",
     "\n",
@@ -480,7 +481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "164ba2f339084c149b4f72a2b4049e66",
+       "model_id": "f2f57493865b4644839ab300984b4350",
        "version_major": 2,
        "version_minor": 0
       },
@@ -490,13 +491,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Input torch.Size([1, 50, 50]) is not divisible by patch size [1, 16, 16].The border will be ignored, add backbone_padding for pixel-wise tasks.\n"
-     ]
     },
     {
      "data": {
@@ -602,7 +596,7 @@
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 1 </span>│ train_metrics │ MetricCollection       │      0 │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 2 </span>│ val_metrics   │ MetricCollection       │      0 │ train │\n",
        "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 3 </span>│ test_metrics  │ MetricCollection       │      0 │ train │\n",
-       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 4 </span>│ _model_module │ RegressionModel_flux   │  304 M │ train │\n",
+       "│<span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 4 </span>│ model         │ RegressionModel_flux   │  304 M │ train │\n",
        "└───┴───────────────┴────────────────────────┴────────┴───────┘\n",
        "</pre>\n"
       ],
@@ -614,7 +608,7 @@
        "│\u001b[2m \u001b[0m\u001b[2m1\u001b[0m\u001b[2m \u001b[0m│ train_metrics │ MetricCollection       │      0 │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m2\u001b[0m\u001b[2m \u001b[0m│ val_metrics   │ MetricCollection       │      0 │ train │\n",
        "│\u001b[2m \u001b[0m\u001b[2m3\u001b[0m\u001b[2m \u001b[0m│ test_metrics  │ MetricCollection       │      0 │ train │\n",
-       "│\u001b[2m \u001b[0m\u001b[2m4\u001b[0m\u001b[2m \u001b[0m│ _model_module │ RegressionModel_flux   │  304 M │ train │\n",
+       "│\u001b[2m \u001b[0m\u001b[2m4\u001b[0m\u001b[2m \u001b[0m│ model         │ RegressionModel_flux   │  304 M │ train │\n",
        "└───┴───────────────┴────────────────────────┴────────┴───────┘\n"
       ]
      },
@@ -647,7 +641,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb592b73cc034e78a2b2bf109d980c38",
+       "model_id": "f6c28a699ab04308aef05b26d3308cac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -706,7 +700,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5893818470db4192a230f74d0d198a70",
+       "model_id": "f50b6847c39246de9a00904354b8056b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -738,7 +732,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a3c305d872047498f34c97a683a8c43",
+       "model_id": "35cf277df49d46399c07836827c94f9d",
        "version_major": 2,
        "version_minor": 0
       },
