--- a/examples/example_landslide4sense.ipynb
+++ b/examples/example_landslide4sense.ipynb
@@ -62,7 +62,10 @@
         "    !unzip Landslide4sense.zip\n",
         "  local_path = '.'\n",
         "else:\n",
-        "  local_path = snapshot_download(repo_id='ibm-nasa-geospatial/Landslide4sense', repo_type=\"dataset\", cache_dir='.')"
+        "  local_path = snapshot_download(repo_id='ibm-nasa-geospatial/Landslide4sense', repo_type=\"dataset\", cache_dir='.')\n",
+        "\n",
+        "from huggingface_hub import hf_hub_download\n",
+        "hf_hub_download(repo_id='ibm-nasa-geospatial/Prithvi-EO-2.0-300M',  filename=\"config.json\")"
       ]
     },
     {
@@ -89,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "f72c3016-cb5b-42c9-a480-62cadf2955fc",
       "metadata": {
         "id": "f72c3016-cb5b-42c9-a480-62cadf2955fc"
@@ -101,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "923289c3-8443-4506-809b-41d707b4a627",
       "metadata": {
         "id": "923289c3-8443-4506-809b-41d707b4a627"
@@ -119,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "8a4a1fbb-f346-40e1-9e62-ac490ebfc4ee",
       "metadata": {
         "id": "8a4a1fbb-f346-40e1-9e62-ac490ebfc4ee"
@@ -179,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "22fa5009-26cc-4e48-a940-090ff3476460",
       "metadata": {
         "colab": {
@@ -416,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "0583251b-e55a-455f-aff2-b8e5d6dc883a",
       "metadata": {
         "colab": {
@@ -500,14 +503,11 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
-      "gpuType": "T4",
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
